--- a/src/pages/login/log-in.scss
+++ b/src/pages/login/log-in.scss
@@ -89,7 +89,7 @@
       }
     }
     .login__img {
-      width: 400px;
+      min-width: 400px;
       height: 100%;
       object-fit: cover;
     }
