--- a/src/pages/signup/signup.scss
+++ b/src/pages/signup/signup.scss
@@ -75,7 +75,7 @@
         }
       }
       .signup__img {
-        width: 400px;
+        min-width: 400px;
         height: 100%;
         object-fit: cover;
       }
